[jenkins-user-permission] Add Q-12 or later